ansible/configs/kubernetes/example/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: static-example
  namespace: app-example
  name: static-example
spec:
  selector:
    service: static-example
  ports:
    - name: "30011"
      nodePort: 30011
      port: 8080
      targetPort: 8080
  type: NodePort
