ansible/configs/kubernetes/example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: app-example
  name: lb-example
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-access-log: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
      - example.com
      secretName: tls-secret-example
    - hosts:
      - www.example.com
      secretName: tls-secret-example-www
  rules:
    - host: www.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: static-example
              port:
                number: 8080
    - host: example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: static-example
              port:
                number: 8080
